# FAST-lio-withSTD

./: .gitignore  CMakeLists.txt  README.md
Log/: optTran_path.tum  oriTran_path.tum
config/: avia.yaml  ouster16.yaml  sjtu.yaml  velodyne.yaml
include/: Preintegration.h  STDesc.h  common_lib.h  use-ikfom.hpp
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/ceres/: loop_clousure_factor.h  pose_graph_3d_error_term.h
launch/: loop_livox.launch  loop_vel.launch  mapping_avia.launch  mapping_ouster16.launch  sjtu.launch
rviz_cfg/: demo.rviz  loam_livox.rviz
src/: IMU_Processing.hpp  Optimization_sam.cpp  Optimizations.cpp  STDesc.cpp  laserMapping.cpp  online_demo.cpp
